Fixed compare button styling on mobile

--- a/src/sass/app/metatrader.scss
+++ b/src/sass/app/metatrader.scss
@@ -554,6 +554,14 @@
             margin-left: 0 !important;
         }
     }
+    .button-full-width-m {
+        width: 100%;
+
+        span {
+            width: 100%;
+            box-sizing: border-box;
+        }
+    }
 }
 
 .mt-sidebar-button {
